lesson-16-cluster-njd16/deploy-svc-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  labels:
    app: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: dvorkinguy/simple-flask-app:3.1.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: main
spec:
  selector:
    app: main
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
