lesson-16-cluster-njd16/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - app.notjustdevops.com
    - simple.notjustdevops.com
    - java.notjustdevops.com
    - notjustdevops.com

    secretName: app-tls
  rules:
   - host: app.notjustdevops.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app
                port: 
                  number: 80
   - host: simple.notjustdevops.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: simple
                port: 
                  number: 80
   - host: java.notjustdevops.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: java
                port: 
                  number: 80
   - host: notjustdevops.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: main
                port: 
                  number: 80
